@@ -8,6 +8,7 @@
   <component name="DesignSurface">
     <option name="filePathToZoomLevelMap">
       <map>
+        <entry key="app/src/main/res/drawable/ic_round_visibility_off.xml" value="0.3640625" />
         <entry key="app/src/main/res/layout/activity_settings.xml" value="0.3484375" />
         <entry key="app/src/main/res/layout/fragment_bottomsheet_changelog.xml" value="0.3484375" />
         <entry key="app/src/main/res/layout/fragment_bottomsheet_feedback.xml" value="0.3484375" />
