@@ -20,87 +20,43 @@
 package xyz.zedler.patrick.doodle.util;
 
 import android.content.Context;
-import android.os.Build;
-import android.os.VibrationEffect;
-import android.os.Vibrator;
 import android.provider.Settings;
+import android.view.HapticFeedbackConstants;
+import android.view.View;
 
 public class HapticUtil {
 
-  private final Vibrator vibrator;
   private boolean enabled;
+  private final View view;
 
-  public static final long TICK = 13;
-  public static final long CLICK = 20;
-  public static final long HEAVY = 50;
-
-  public HapticUtil(Context context) {
-    vibrator = (Vibrator) context.getSystemService(Context.VIBRATOR_SERVICE);
-    enabled = hasVibrator();
-  }
-
-  public void vibrate(long duration) {
-    if (!enabled) {
-      return;
-    }
-    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
-      vibrator.vibrate(VibrationEffect.createOneShot(duration, VibrationEffect.DEFAULT_AMPLITUDE));
-    } else {
-      vibrator.vibrate(duration);
-    }
-  }
-
-  private void vibrate(int effectId) {
-    if (enabled && Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
-      vibrator.vibrate(VibrationEffect.createPredefined(effectId));
-    }
-  }
-
-  public void tick() {
-    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
-      vibrate(VibrationEffect.EFFECT_TICK);
-    } else {
-      vibrate(TICK);
-    }
+  public HapticUtil(View view) {
+    this.view = view;
+    setEnabled(true);
   }
 
   public void click() {
-    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
-      vibrate(VibrationEffect.EFFECT_CLICK);
-    } else {
-      vibrate(CLICK);
-    }
-  }
-
-  public void doubleClick() {
-    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
-      vibrate(VibrationEffect.EFFECT_DOUBLE_CLICK);
-    } else {
-      vibrate(CLICK);
+    if (enabled) {
+      view.performHapticFeedback(
+          HapticFeedbackConstants.CONTEXT_CLICK, HapticFeedbackConstants.FLAG_IGNORE_GLOBAL_SETTING
+      );
     }
   }
 
   public void heavyClick() {
-    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
-      vibrate(VibrationEffect.EFFECT_HEAVY_CLICK);
-    } else {
-      vibrate(HEAVY);
+    if (enabled) {
+      view.performHapticFeedback(
+          HapticFeedbackConstants.LONG_PRESS, HapticFeedbackConstants.FLAG_IGNORE_GLOBAL_SETTING
+      );
     }
   }
 
   public void setEnabled(boolean enabled) {
-    this.enabled = enabled && hasVibrator();
-  }
-
-  public boolean hasVibrator() {
-    return vibrator.hasVibrator();
+    this.enabled = enabled;
   }
 
   public static boolean areSystemHapticsTurnedOn(Context context) {
     int hapticFeedbackEnabled = Settings.System.getInt(
-        context.getContentResolver(),
-        Settings.System.HAPTIC_FEEDBACK_ENABLED,
-        0
+        context.getContentResolver(), Settings.System.HAPTIC_FEEDBACK_ENABLED, 0
     );
     return hapticFeedbackEnabled != 0;
   }
